--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.9",
     "framer-motion": "^11.3.31",
+    "lottie-react": "^2.4.0",
     "i18next": "^23.11.5",
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.446.0",
