--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,4 @@
-﻿# Node / Vite / React
-node_modules/
-dist/
-.cache/
-.tmp/
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-# Editors
-.vscode/
-.idea/
-*.swp
-
-# OS
-.DS_Store
-Thumbs.db
-
-# Env
+__pycache__/
+*.pyc
 .env
-.env.local
-.env.*
-
-# Local Netlify folder
-.netlify
+node_modules
